# status-sphere

./: .gitignore  CMakeLists.txt  DISCLAIMER.md  LICENSE  README.md  assembly.md  partitions.csv  sdkconfig  sdkconfig.defaults
Case/: 3d printed case
components/esp32_s3_touch_amoled_1_75/: CMakeLists.txt  esp32_s3_touch_amoled_1_75.c  idf_component.yml
flash/: index.html
main/: CMakeLists.txt  app_main.cpp  idf_component.yml
main/include/error_lookup/: error_lookup.tsv
main/include/font/: dosis_20.c  dosis_32.c  dosis_40.c  mdi_30.c  mdi_40.c
main/include/img/: bambuicon.c
main/include/printsphere/: application.hpp  bambu_cloud_client.hpp  bambu_status.hpp  board_config.hpp  config_store.hpp  debug_log_buffer.hpp  error_lookup.hpp  layout_assets_registry.hpp  layout_renderer.hpp  msa2_status.hpp  msa2_status_client.hpp  p1s_camera_client.hpp  pmu.hpp  printer_client.hpp  printer_state.hpp  setup_portal.hpp  status_resolver.hpp  time_sync.hpp  ui.hpp  wifi_manager.hpp
main/resources/: layout.json
main/src/: application.cpp  bambu_cloud_client.cpp  bambu_status.cpp  config_store.cpp  debug_log_buffer.cpp  error_lookup.cpp  layout_assets_registry.cpp  layout_renderer.cpp  msa2_status.cpp  msa2_status_client.cpp  p1s_camera_client.cpp  pmu.cpp  printer_client.cpp  printer_state.cpp  setup_portal.cpp  status_resolver.cpp  time_sync.cpp  ui.cpp  wifi_manager.cpp
release/beta/: README.md
tools/: package_initial_flash.py  start_editor.bat
tools/editor/: convert_assets.py  idf_path.txt.example  requirements.txt  server.py
tools/patches/: apply_adapter_patches.ps1
(+2 files in other folders)
